--- a/package.json
+++ b/package.json
@@ -30,13 +30,10 @@
   "devDependencies": {
     "react-native": "0.42.3",
     "react": "15.4.2",
-    "babel-jest": "19.x.x",
     "babel-preset-react-native": "1.x.x",
     "eslint": "3.x.x",
     "eslint-plugin-babel": "3.x.x",
     "eslint-plugin-react": "6.x.x",
-    "eslint-plugin-react-native": "2.x.x",
-    "jest": "19.x.x",
-    "react-test-renderer": "15.x.x"
+    "eslint-plugin-react-native": "2.x.x"
   }
 }
