--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -77,13 +77,13 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 31
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.github.droibit.android.reactnative.customtabs.example"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         ndk {
@@ -120,10 +120,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile project(':react-native-custom-tabs')
-    compile "com.android.support:appcompat-v7:25.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(':react-native-custom-tabs')
+    implementation "com.android.support:appcompat-v7:25.0.1"
+    //noinspection GradleDynamicVersion
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
