--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-unicorn": "^42.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   }
