--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "prepublishOnly": "rm -rf dist/ && npx tsc",
+    "prepublishOnly": "rm -rf dist/ && npm run lint && tsc",
     "format": "prettier --write index.ts",
     "lint": "eslint index.ts"
   },
